--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ body {
   }
 
   .bento-title {
-    @apply uppercase md:text-6xl text-4xl font-black font-zentry;
+    @apply md:text-6xl text-4xl font-black font-zentry;
   }
 
 
